Bug 81407 - FILESAVE: Line Chart (Points only): Data point color not preserved when export to XLSX
Summary: FILESAVE: Line Chart (Points only): Data point color not preserved when expor...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
3.6.7.2 release
Hardware: x86 (IA32) All
: medium major
Assignee: Markus Mohrhard
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2014-07-16 04:54 UTC by Kevin Suo
Modified: 2019-04-18 16:48 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
attachment 102886 saving as xlsx (8.76 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2014-07-16 04:58 UTC, Kevin Suo
Details
screenshot: original chart in ods file (10.18 KB, image/png)
2014-07-16 04:59 UTC, Kevin Suo
Details
screenshot: exported xlsx file open with libreoffice (9.43 KB, image/png)
2014-07-16 04:59 UTC, Kevin Suo
Details
screenshot: exported xlsx file open with MSO 2010 (104.73 KB, image/png)
2014-07-16 05:03 UTC, Kevin Suo
Details
Saved by LO 4.3.0.2, opened by Kingsoft 2013 (13.37 KB, image/png)
2014-07-16 06:29 UTC, ign_christian
Details
Saved by LibreOffice Dev 4.3.1.0, open with MSO 2010 (84.56 KB, image/png)
2014-07-17 02:27 UTC, Kevin Suo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2014-07-16 04:54:16 UTC
The ods file in attachment 102886 [details] contains a simple line chart (dots only). 
When export as XLSX, data points color are changed.

Windows XP SP3
LibreOffice 4.2.6.1
Comment 1 Kevin Suo 2014-07-16 04:58:30 UTC
Created attachment 102887 [details]
attachment 102886 [details] saving as xlsx
Comment 2 Kevin Suo 2014-07-16 04:59:15 UTC
Created attachment 102888 [details]
screenshot: original chart in ods file
Comment 3 Kevin Suo 2014-07-16 04:59:53 UTC
Created attachment 102889 [details]
screenshot: exported xlsx file open with libreoffice
Comment 4 Kevin Suo 2014-07-16 05:03:47 UTC
Created attachment 102890 [details]
screenshot: exported xlsx file open with MSO 2010

When open the exported xlsx file with MSO 2010, data points color are also different compared with openning with LibreOffice (comment 3)
Comment 5 ign_christian 2014-07-16 06:19:44 UTC
(In reply to comment #3)
> Created attachment 102889 [details]
> screenshot: exported xlsx file open with libreoffice

Confirmed with LO 4.3.0.2, 4.2.6.1, 4.1.6.2, 4.0.6.2, 3.6.7.2 in Ubuntu 12.04 x86
Comment 6 ign_christian 2014-07-16 06:21:46 UTC
(In reply to comment #4)
> Created attachment 102890 [details]
> screenshot: exported xlsx file open with MSO 2010
> 
> When open the exported xlsx file with MSO 2010, data points color are also
> different compared with openning with LibreOffice (comment 3)

Same result while opened file saved by LO 4.2.6.1 and below with Kingsoft 2013
Comment 7 ign_christian 2014-07-16 06:24:42 UTC
(In reply to comment #6)
Looks like point shape also changed, square to diamond and vice versa
Comment 8 ign_christian 2014-07-16 06:29:52 UTC
Created attachment 102898 [details]
Saved by LO 4.3.0.2, opened by Kingsoft 2013

Different result if saved file with LO 4.3.0.2 opened in Kingsoft.
Comment 9 Kevin Suo 2014-07-16 06:30:10 UTC
(In reply to comment #7)
> Looks like point shape also changed, square to diamond and vice versa

Yes it is...Thanks for pointing out.
Comment 10 Kevin Suo 2014-07-16 06:32:01 UTC
(In reply to comment #8)
> Different result if saved file with LO 4.3.0.2 opened in Kingsoft.
That image is inconceivable. But I think that may be Kingsoft's bug if it open like that.
Comment 11 ign_christian 2014-07-16 06:37:20 UTC
(In reply to comment #6)
> Same result while opened file saved by LO 4.2.6.1 and below with Kingsoft
> 2013
Sorry..only 4.2.6.1, 4.2.5.2, 4.1.6.2 that has same result while opened in Kingsoft. 

4.0.6.2 and 3.6.7.2 is different with newest version, but both version shows the same.
Comment 12 ign_christian 2014-07-16 06:40:06 UTC
(In reply to comment #10)
Yes it's really different. Perhaps you had test that with 4.3.x ? Any difference while opened with MSO ?
Comment 13 Kevin Suo 2014-07-17 02:15:44 UTC
Per
https://bugs.freedesktop.org/show_bug.cgi?id=81396#c2

Line Chart (Points only) has this issue,
Line Chart (Points and lines) works OK.
Comment 14 Kevin Suo 2014-07-17 02:27:44 UTC
Created attachment 102955 [details]
Saved by LibreOffice Dev 4.3.1.0, open with MSO 2010

The test file when save as XLSX using 4.3.1.0.0+, and open with MSO, the same result as in comment 8.
Comment 15 Markus Mohrhard 2015-04-15 01:51:06 UTC
It was not only an export but also an import issue.

Both are fixed now and will be pushed soon.