export marker color correctly, tdf#81407

Change-Id: Iebc3d87642c93fcdecddd6332fd57b7fdfb2d337
(cherry picked from commit 96c05f82cd4df35505497bc29d96c8a250072db0)